--- a/src/parser/Cargo.toml
+++ b/src/parser/Cargo.toml
@@ -20,6 +20,8 @@ soa_derive = "0.12.0"
 lazy_static = "1.4.0"
 bit_reverse = "0.1.8"
 memmap2 = "0.5.10"
+serde_json = "1.0.96"
+serde = { version = "1.0.163", features = ["derive"] }
 
 
 
