--- a/src/wasm/Cargo.toml
+++ b/src/wasm/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "demoparser2"
+name = "wasmparser"
 version = "0.1.0"
 authors = ["LaihoE"]
 edition = "2018"
@@ -16,6 +16,7 @@ itertools = "0.10.5"
 web-sys = { version = "0.3.61", features = ["console"] }
 wasm-bindgen-file-reader = "1.0.0"
 getrandom = { version = "0.2", features = ["js"] }
+serde_json = "1.0.96"
 
 
 
