--- a/src/wasm/Cargo.toml
+++ b/src/wasm/Cargo.toml
@@ -17,6 +17,7 @@ web-sys = { version = "0.3.61", features = ["console"] }
 wasm-bindgen-file-reader = "1.0.0"
 getrandom = { version = "0.2", features = ["js"] }
 serde_json = "1.0.96"
+wasmedge-wasi-helper = "0.2.0"
 
 
 
