--- a/src/node/package.json
+++ b/src/node/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "demoparser2",
-  "version": "0.0.0",
+  "name": "@laihoe/demoparser2",
+  "version": "0.0.4",
   "main": "index.js",
   "types": "index.d.ts",
   "napi": {
