--- a/src/node/npm/android-arm64/package.json
+++ b/src/node/npm/android-arm64/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "demoparser2-android-arm64",
-  "version": "0.0.0",
+  "name": "@laihoe/demoparser2-android-arm64",
+  "version": "0.0.4",
   "os": [
     "android"
   ],
