--- a/src/node/npm/darwin-universal/package.json
+++ b/src/node/npm/darwin-universal/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "demoparser2-darwin-universal",
-  "version": "0.0.0",
+  "name": "@laihoe/demoparser2-darwin-universal",
+  "version": "0.0.4",
   "os": [
     "darwin"
   ],
