--- a/src/node/npm/linux-arm64-musl/package.json
+++ b/src/node/npm/linux-arm64-musl/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "demoparser2-linux-arm64-musl",
-  "version": "0.0.0",
+  "name": "@laihoe/demoparser2-linux-arm64-musl",
+  "version": "0.0.4",
   "os": [
     "linux"
   ],
