--- a/src/node/npm/win32-ia32-msvc/package.json
+++ b/src/node/npm/win32-ia32-msvc/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "demoparser2-win32-ia32-msvc",
-  "version": "0.0.0",
+  "name": "@laihoe/demoparser2-win32-ia32-msvc",
+  "version": "0.0.4",
   "os": [
     "win32"
   ],
