--- a/src/parser/Cargo.toml
+++ b/src/parser/Cargo.toml
@@ -21,6 +21,7 @@ lazy_static = "1.4.0"
 bit_reverse = "0.1.8"
 memmap2 = "0.5.10"
 serde = { version = "1.0.164", features = ["derive"] }
+rayon = "1.7.0"
 
 
 
@@ -32,7 +33,7 @@ path = "../csgoproto"
 overflow-checks = false
 
 [profile.release]
-debug = true
+#debug = true
 
 #opt-level = 3
 #lto = "fat"
